# A-simple-ray-tracer

./: CMakeLists.txt  README.md  main.cpp
images/: hello-world.ppm
include/: Albedo.h  Camera.h  Color.h  Dielectric.h  Hittable.h  HittableList.h  Lambertian.h  Material.h  Metal.h  Point3.h  Ray.h  Sphere.h  Utility.h  Vector3.h
lib/: CMakeLists.txt  Camera.cpp  Color.cpp  Dielectric.cpp  HittableList.cpp  Lambertian.cpp  Metal.cpp  Point3.cpp  Ray.cpp  Sphere.cpp  Utility.cpp  Vector3.cpp
unittests/: CMakeLists.txt  CameraTest.cpp  ColorTest.cpp  DielectricTest.cpp  HittableListTest.cpp  MetalTest.cpp  Point3Test.cpp  RayTest.cpp  SphereTest.cpp  Vector3Test.cpp
